--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: create issues action
         uses: ./ # Uses an action in the root directory
         with:
-          token: ${{secrets.TOKEN}}
+          token${{secrets.TOKEN}}
  runs:
    using: 'node16'
    main: 'index.js'
